appId: metasecret.project.com
---
- launchApp
- tapOn:
    point: "50%,58%"
- inputText: "1111"
- pressKey: Enter
- tapOn: ".*Continue.*"
